--- a/pages/activities.html
+++ b/pages/activities.html
@@ -214,7 +214,7 @@
 
 
 <!-- 2023.02.12 收到的审稿邀请 -->
-    <li><strong>Invited Reviewer</strong>, Computational Intelligence and Neuroscience (<a href="https://www.hindawi.com/journals/cin/"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
+    <li><strong>Invited Reviewer</strong>, Computational Intelligence and Neuroscience (<a href="https://www.hindawi.com/journals/cin/"><strong><u><font color="#874e26">CIN</font></u></strong></a>)</li>
 
 
     <!-- \item {计算机研究与发展}  -->
