--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -443,7 +443,13 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/zgrJVFvkqG69BrQCky193A" target="_blank">ChatGPT背后模型被证实具有人类心智！斯坦福新研究炸了，知名学者：“这一天终于来了”</a>
     |
     <a href="https://mp.weixin.qq.com/s/Q7MxzgY_8nLjhwxGtQwLlg" target="_blank">全面学习 ChatGPT，机器之心准备了 89 篇文章合集</a>
+    |
+  <!-- 2.13 -->
+    <a href="https://mp.weixin.qq.com/s/t6Vbt_X1gn4UeWk6g9yoMQ" target="_blank">ChatGPT国内赛道开卷，互联网大佬带资3.5亿宣布入场</a>
     |    
+    <a href="https://mp.weixin.qq.com/s/sWq-cTfsyprY5DS5iEnepQ" target="_blank">无法阻止ChatGPT杀入学术圈，Nature一周连发两文引发大辩论</a>
+    | 
+    
 </br>
 </br>
 <h4>2022</h4>
