--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -449,7 +449,13 @@ ChatGPT:
     |    
     <a href="https://mp.weixin.qq.com/s/sWq-cTfsyprY5DS5iEnepQ" target="_blank">无法阻止ChatGPT杀入学术圈，Nature一周连发两文引发大辩论</a>
     | 
-    
+  <!-- 2.13 -->
+    <a href="https://mp.weixin.qq.com/s/L3LeYW3a62RQHhuTqZvPgQ" target="_blank">访谈实录｜停止对ChatGPT的空洞唱和，不如反思人类社会的诸多设计</a>
+    |
+    <a href="https://www.shobserver.com/staticsg/res/html/web/newsDetail.html?id=582413" target="_blank">ChatGPT通过美国执业医师资格考试？医疗人工智能会取代还是帮助医生</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/nca9jMOXgMKfhA8bo0FQvw" target="_blank">让ChatGPT长“手”！Meta爆火新论文，让语言模型学会自主使用工具</a>
+    |      
 </br>
 </br>
 <h4>2022</h4>
