--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -302,6 +302,8 @@
 <!-- Computational Linguistics -->
     <a href="http://cips-cl.org/static/CCL2023/index.html" target="_blank">CCL</a>
     |
+    <a href="https://sigkg.cn/ccks2023/" target="_blank">CCKS</a>
+    |
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
 <!-- Web-based Learning -->
@@ -455,7 +457,14 @@ ChatGPT:
     <a href="https://www.shobserver.com/staticsg/res/html/web/newsDetail.html?id=582413" target="_blank">ChatGPT通过美国执业医师资格考试？医疗人工智能会取代还是帮助医生</a>
     | 
     <a href="https://mp.weixin.qq.com/s/nca9jMOXgMKfhA8bo0FQvw" target="_blank">让ChatGPT长“手”！Meta爆火新论文，让语言模型学会自主使用工具</a>
-    |      
+    |
+  <!-- 2.14 -->
+    <a href="https://mp.weixin.qq.com/s/E7k-wdNlke4Q5LRmpJVEHg" target="_blank">ChatGPT加持下的微软New Bing 错误频出，别只骂谷歌的Bard了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/V4APFyQjEBy52OUHcoY1Mw" target="_blank">ChatGPT风口上的微软，解散了工业元宇宙应用团队</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/K7qhJhLkUY5eVJ1N506Zqg" target="_blank">抢中国版ChatGPT首发的公司们</a>
+    |       
 </br>
 </br>
 <h4>2022</h4>
@@ -2074,6 +2083,8 @@ NLP/KG Field：
     |
 <!-- Zhejiang University-->
     <a href="https://zxlzr.github.io/" target="_blank">Ningyu Zhang</a>
+    |
+    <a href="http://yangy.org/" target="_blank">Yang Yang</a>
     |
     <a href="https://person.zju.edu.cn/jieyang#0" target="_blank">Jie Yang</a>
     |
