--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -334,6 +334,8 @@
     |
     <a href="https://www.acaitconf.com/singer/438.html" target="_blank">ACAIT</a>
     |
+    <a href="https://agist.org//iccsi2023" target="_blank">ICCSI</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
     |
@@ -464,6 +466,11 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/V4APFyQjEBy52OUHcoY1Mw" target="_blank">ChatGPT风口上的微软，解散了工业元宇宙应用团队</a>
     |
     <a href="https://mp.weixin.qq.com/s/K7qhJhLkUY5eVJ1N506Zqg" target="_blank">抢中国版ChatGPT首发的公司们</a>
+    |
+  <!-- 2.15 -->
+    <a href="https://mp.weixin.qq.com/s/WEVCUXqGrBb2hAcSe063gA" target="_blank">【chatGPT】和chatGPT结对编程的6小时</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Vv45QCU_rGEeU8IHBrIBcQ" target="_blank">ChatGPT 数据集之谜</a>
     |       
 </br>
 </br>
@@ -2051,6 +2058,9 @@ NLP/KG Field：
 <!-- Peking University -->
 <!--     <a href="https://wanxiaojun.github.io/" target="_blank">Xiaojun Wan</a>
     | -->
+<!-- 北京理工大学 -->
+    <a href="https://cs.bit.edu.cn/szdw/jsml/js/mxl/index.htm" target="_blank">Xianling Mao</a>
+    |
 <!-- Nanjing University -->
     <a href="https://sunzequn.github.io/" target="_blank">Zequn Sun</a>
     |
