--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -471,7 +471,16 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/WEVCUXqGrBb2hAcSe063gA" target="_blank">【chatGPT】和chatGPT结对编程的6小时</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Vv45QCU_rGEeU8IHBrIBcQ" target="_blank">ChatGPT 数据集之谜</a>
-    |       
+    |
+    <a href="https://mp.weixin.qq.com/s/T0ShM0IhtNrwPRbkDA6eGg" target="_blank">ChatGPT版Bing被调戏到生气发飙，ChatGPT被证实具有人类心智</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/QmP9EJmvbVZ0YN3EMT0eJQ" target="_blank">S级秘术！指导ChatGPT训练一个神经网络的超详细「指令」来啦！</a>
+    |  
+  <!-- 2.16 -->
+    <a href="https://mp.weixin.qq.com/s/-oExxnCNJD4N7wE1TVa1AQ" target="_blank">AI大佬不满ChatGPT：亟待完善ChatGPT的道德护栏</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Idtu646LeVuV38utMCBHeQ" target="_blank">用 ChatGPT 将 Excel 工作效率提高 10 倍！离做PPT还远吗</a>
+    |
 </br>
 </br>
 <h4>2022</h4>
