--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1485,6 +1485,8 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/l-GK1ZX_M1cg_rejLZu25Q" target="_blank">Pytorch - 弹性训练原理分析</a>
     |
     <a href="https://mp.weixin.qq.com/s/YWGPLlUAykrGomuHKTftpg" target="_blank">一文浅谈Transforme性能优化的常见方法</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/QmP9EJmvbVZ0YN3EMT0eJQ" target="_blank">S级秘术！指导ChatGPT训练一个神经网络的超详细「指令」来啦！</a>
     |                      
 <!--   <br /> -->
 
