--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -322,6 +322,8 @@
     |
     <a href="https://www.akbc.ws/2023/" target="_blank">AKBC</a>
     |
+    <a href="https://ijckg2023.knowledge-graph.jp/index.html" target="_blank">IJCKG</a>
+    |
 <!--  -->
     <a href="http://www.prai.net/" target="_blank">PRAI</a>
     |
@@ -480,6 +482,15 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/-oExxnCNJD4N7wE1TVa1AQ" target="_blank">AI大佬不满ChatGPT：亟待完善ChatGPT的道德护栏</a>
     |
     <a href="https://mp.weixin.qq.com/s/Idtu646LeVuV38utMCBHeQ" target="_blank">用 ChatGPT 将 Excel 工作效率提高 10 倍！离做PPT还远吗</a>
+    |
+  <!-- 2.17 -->
+    <a href="https://mp.weixin.qq.com/s/ZJQYcnqbwlBV1ra0rnX1uw" target="_blank">日烧70万美元的ChatGPT如何融入搜索引擎</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Cdf1it7mDA2Nd-MGllIGdg" target="_blank">超越GPT 3.5的小模型来了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/tBbDRdnFrmSv1X2ttpw6Zg" target="_blank">ChatGPT逼急谷歌，劈柴发全员信：别慌，迟到也能赢！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/43kKLcFkJkTA5XbiCYxglw" target="_blank">张家俊：关于ChatGPT八个技术问题的猜想</a>
     |
 </br>
 </br>
