--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -492,6 +492,13 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/43kKLcFkJkTA5XbiCYxglw" target="_blank">张家俊：关于ChatGPT八个技术问题的猜想</a>
     |
+  <!-- 2.20 -->
+    <a href="https://mp.weixin.qq.com/s/Ef2347Mn3VeM19F0j-EUDQ" target="_blank">OpenAI透露ChatGPT未来发展计划：要与人类价值保持一致</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/AzWbE7z1gBlxN2q1x6cYng" target="_blank">跟李沐学ChatGPT背后技术：67分钟读透InstructGPT论文</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WpGaIZVAVlbchu8kgHVtJg" target="_blank">港大全面封杀ChatGPT；重新思考ChatGPT抄袭检测；挣钱多的人智商更高？｜热点回顾</a>
+    |    
 </br>
 </br>
 <h4>2022</h4>
