--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1762,6 +1762,10 @@ AI Big Model:
 
 <br />
      <a href="https://github.com/shengyp/top_nlp_teams/tree/gh-pages" target="_blank">顶尖的工业界NLP团队（主要有：达摩院NLP团队）</a> | <a href="https://www.zhihu.com/question/19853190" target="_blank">新加坡有哪些大学实验室关注 NLP 和 IR 研究方向？</a> | <a href="https://mp.weixin.qq.com/s/e20lZZQCPVOeA4L5Ta3o7g" target="_blank">国内较强的NLP高校实验室有哪些？</a> | <a href="https://mp.weixin.qq.com/s?__biz=MzU2MjM2OTY2Mw==&mid=2247483746&idx=1&sn=f7a0eff36fccacccd355207b3f9e6453&chksm=fc6bc472cb1c4d64cab93cb5051054e3edba0d33465e2d0cfdcdb7d301eff74a7352da032dc2&token=1702490020&lang=zh_CN#rd" target="_blank">国内外知识图谱相关公司浅析</a> | <a href="https://mp.weixin.qq.com/s/zTn4W2YXIlxCff_Xi5a1JQ" target="_blank">选人工智能最强导师？建议你收藏这份名单</a> | <a href="https://mp.weixin.qq.com/s/Rs2-B6Tq59jr1pSwgXLbcQ" target="_blank">知乎热议！2021大厂AI Lab现状盘点，网友：名存实亡</a> | <a href="https://mp.weixin.qq.com/s/WcRYukvpTz32No8WqLBATA" target="_blank">从Google Scholar看各大科技公司科研水平</a>
+
+<br />
+    <a href="https://www.toutiao.com/article/7202859899653456416/?app=news_article&timestamp=1677179221&use_new_style=1&req_id=202302240307002FB74CDED8232824FC95&group_id=7202859899653456416&wxshare_count=1&tt_from=weixin&utm_source=weixin&utm_medium=toutiao_android&utm_campaign=client_share&share_token=39a90cdf-0683-4f49-90b9-612a750d62c9&source=m_redirect&wid=1677179550118" target="_blank">打造中国版ChatGPT，这是国内最有实力的一批NLP团队与人才</a>
+
 <br />
 <br />
 
