--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -501,7 +501,10 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/AzWbE7z1gBlxN2q1x6cYng" target="_blank">跟李沐学ChatGPT背后技术：67分钟读透InstructGPT论文</a>
     |
     <a href="https://mp.weixin.qq.com/s/WpGaIZVAVlbchu8kgHVtJg" target="_blank">港大全面封杀ChatGPT；重新思考ChatGPT抄袭检测；挣钱多的人智商更高？｜热点回顾</a>
-    |    
+    |   
+  <!-- 2.24 --> 
+    <a href="https://mp.weixin.qq.com/s/HHhh3BWEknQHfy6Pl0wvBA" target="_blank">追赶ChatGPT的难点与平替</a>
+    |   
 </br>
 </br>
 <h4>2022</h4>
