--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -334,6 +334,9 @@
 <!-- Geographic Information Systems -->
     <a href="https://sigspatial2023.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
     |
+<!-- IR -->
+    <a href="http://www.sigir-ap.org/sigir-ap-2023/" target="_blank">SIGIR-AP</a>
+    |
 <!-- database -->
     <a href="https://ccf.org.cn/ndbc2023" target="_blank">NDBC</a>
     |
