--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -504,10 +504,71 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/AzWbE7z1gBlxN2q1x6cYng" target="_blank">跟李沐学ChatGPT背后技术：67分钟读透InstructGPT论文</a>
     |
     <a href="https://mp.weixin.qq.com/s/WpGaIZVAVlbchu8kgHVtJg" target="_blank">港大全面封杀ChatGPT；重新思考ChatGPT抄袭检测；挣钱多的人智商更高？｜热点回顾</a>
-    |   
+    |
+  <!-- 2.21 -->
+    <a href="https://mp.weixin.qq.com/s/AyXboJoKZsKasUJ0KUYtPA" target="_blank">为什么所有公开的对 GPT-3 的复现都失败了？复现和使用GPT-3/ChatGPT，你所应该知道的</a>
+    |
+    <a href="https://mp.weixin.qq.com/s?__biz=MzIwNzc2NTk0NQ==&mid=2247543844&idx=2&sn=86bf4a024fb5f4a00a3fb9f4a8620285&chksm=970f04f2a0788de43019dc247ed314c39d6ef94f16ef9c21c2c9123ef84806853197a44045d9&scene=126&sessionid=1677321842&subscene=227#rd" target="_blank">GPT版超级马里奥来了！用文字生成游戏关卡自己玩是一种什么样的体验？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/AyXboJoKZsKasUJ0KUYtPA" target="_blank">为什么所有公开的对 GPT-3 的复现都失败了？复现和使用GPT-3/ChatGPT，你所应该知道的</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cdbw1klu7svpPIdKcMIA9A" target="_blank">跟AI唠嗑，年入33万美金！ChatGPT时代的必备新技能</a>
+    |     
+<!--     SylviaAigle8746@outlook.com----eQBSYjWu6----JWLshflS----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
+邮箱～邮箱密码～openai密码～api -->
+  <!-- 2.22 -->
+    <a href="https://mp.weixin.qq.com/s/p0s6FmEof2gkb0jrHBo3JA" target="_blank">GPT系列的数据集之谜</a>
+    |
+  <!-- 2.23 -->
+    <a href="https://mp.weixin.qq.com/s/5qaxr0-X2U3zNopseDn52A" target="_blank">ChatGPT劲敌团队发布，可轻松引导ChatGPT不要输出有害言论！</a>
+    |
   <!-- 2.24 --> 
     <a href="https://mp.weixin.qq.com/s/HHhh3BWEknQHfy6Pl0wvBA" target="_blank">追赶ChatGPT的难点与平替</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ZRAuV_ZBW-lESrZ-u2Uorw" target="_blank">硅谷大佬：我为什么要逃离谷歌？</a>
+    |
+  <!-- 2.25 --> 
+    <a href="https://mp.weixin.qq.com/s/fT5N740d4ZXag2SpMHZNIw" target="_blank">张家俊：关于ChatGPT八个技术问题的猜想</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ZzxsOf8HaNcJUV3xIpWlOw" target="_blank">开源版GPT-3来了？Meta发布LLaMa，多数任务效果超越GPT-3，已开源</a>
     |   
+  <!-- 2.26 --> 
+    <a href="https://mp.weixin.qq.com/s/jbdr8fHaXsdWWzWrxEkbDQ" target="_blank">用ChatGPT操控机器人，微软开启居家机器人新纪元！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/HHhh3BWEknQHfy6Pl0wvBA" target="_blank">追赶ChatGPT的难点与平替</a>
+    |
+  <!-- 2.27 --> 
+    <a href="https://mp.weixin.qq.com/s/LdugdTl0Dy8vVLlXXwZBMQ" target="_blank">没有这些，别妄谈做ChatGPT了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/OLolffPy_9NZ9BSZXEIygA" target="_blank">强强联合！谷歌大模型团队并入DeepMind！誓要赶上ChatGPT进度</a>
+    |
+  <!-- 2.28 --> 
+    <a href="https://www.toutiao.com/article/7205092404427391491/?app=news_article&timestamp=1677604032&use_new_style=1&req_id=2023030101071244407EB724AE152211E2&group_id=7205092404427391491&wxshare_count=1&tt_from=weixin&utm_source=weixin&utm_medium=toutiao_android&utm_campaign=client_share&share_token=c1150a4e-a242-47a8-8128-13fa59a3e23d&source=m_redirect" target="_blank">腾讯类ChatGPT保密项目爆出，张正友带队研发「混元助手」</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/pmDhA-TjT2HnHBT2cowouQ" target="_blank">已上线公测！打开就能用的“中国版ChatGPT”，速来过招</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XXJJxQbqR-WtYW3l3nB-9w" target="_blank">打造ChatGPT的团队：平均年龄32岁！华人成员：清北+名校深造</a>
+    |
+  <!-- 3.1 --> 
+    <a href="https://mp.weixin.qq.com/s/op2k0IA2ukQGsQl6FXNd8Q" target="_blank">GPT全家桶再添一员！看论文神器，ResearchGPT，可立即试用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ivHmEJD_ny9WWQBgwBDhig" target="_blank">从BERT到ChatGPT，9大顶尖机构发布：那些年一起追过的「预训练基础模型」</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/sLDIOoEq-IKt7yfmvrD1rA" target="_blank">专委会动态|从心智计算研究的视角审视ChatGPT与人工智能内容生成专题研讨观点汇聚</a>
+    |
+  <!-- 3.2 --> 
+    <a href="https://mp.weixin.qq.com/s/jq1JR-WSc6dJ7rZ70Bs3Mg" target="_blank">微软发布多模态版ChatGPT！取名“宇宙一代”</a>
+    |
+  <!-- 3.3 --> 
+    <a href="https://mp.weixin.qq.com/s/yLFGywgB29mmjVRL7OEOtA" target="_blank">哈工大张民：ChatGPT之后，NLP还有12个待解决命题</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/MEdl3zmiYJU1iFsTXmibng" target="_blank">LeCun：ChatGPT无法实现通用人工智能，但ALM技术路线可以！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/O1bGfAgGjrsUjJxy5WmL1A" target="_blank">「国际科技信息中心SCITIC论坛」从ChatGPT、流浪地球、虚拟数字人、AIGC探索数字化创意，展望人类与AI的共创</a>
+    |
+  <!-- 3.4 --> 
+    <a href="https://mp.weixin.qq.com/s/6p_Vtdkp0Nk8-qmh2TFHcg" target="_blank">“ChatGPT与未来教育”沙龙成功举办</a>
+    |            
 </br>
 </br>
 <h4>2022</h4>
