--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -386,7 +386,9 @@
     <a href="https://mp.weixin.qq.com/s/7ipLgczRyiji3bU2rYRvhQ" target="_blank">张东晓院士：科学机器学习中的知识嵌入与知识发现</a>
     |
     <a href="https://mp.weixin.qq.com/s/qZkQcoFp8HQR9VDTzPyNbw" target="_blank">ICLR 2023论文接收列表公布，top5%都涉及ICL、扩散模型等方向，引热议</a>
-    |              
+    |
+    <a href="http://share.183read.cc/article/4751382/5.html?t=167793162821890" target="_blank">热情拥抱人工智能时代</a>
+    |               
 </br>
 </br>
 Code Understanding: 
