--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -570,7 +570,10 @@ ChatGPT:
     |
   <!-- 3.4 --> 
     <a href="https://mp.weixin.qq.com/s/6p_Vtdkp0Nk8-qmh2TFHcg" target="_blank">“ChatGPT与未来教育”沙龙成功举办</a>
-    |            
+    |
+  <!-- 3.6 --> 
+    <a href="https://mp.weixin.qq.com/s/AalsOJ2fdHziYhvUle0jnA" target="_blank">UCL汪军呼吁创新：后ChatGPT通用人工智能理论及其应用</a>
+    |               
 </br>
 </br>
 <h4>2022</h4>
