--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://mp.weixin.qq.com/s/HHKK3Gibxafv_OFsGXpBaQ" target="_blank">2022年分区表 | 大小类设置和期刊调整</a>
   |
-  <a href="https://www.ccf.org.cn/Academic_Evaluation/By_category/" target="_blank">中国计算机学会推荐国际学术会议和期刊目录-2022 (拟定)</a>
+  <a href="https://www.ccf.org.cn/Academic_Evaluation/By_category/" target="_blank">中国计算机学会推荐国际学术会议和期刊目录-2022 (正式发布)</a>
+  |
+  <a href="https://www.ccf.org.cn/ccftjgjxskwml/" target="_blank">CCF发布计算领域高质量科技期刊分级目录</a>
   |
   <a href="https://www.cie.org.cn/list_43/11070.html" target="_blank">中国电子学会关于《电子技术、通信技术领域高质量科技期刊分级目录（征求意见稿）》和《计算机技术领域高质量科技期刊分级目录（征求意见稿）》的公示</a>
   |
