--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -273,7 +273,7 @@
 <!-- Neural network - C--> 
     <a href="http://www.iconip2023.org/index.html" target="_blank">ICONIP</a>
     |
-    <a href="http://43.155.60.36/" target="_blank">KSEM</a>
+    <a href="https://www.ksem2023.conferences.academy/" target="_blank">KSEM</a>
     |
     <a href="https://2023.eswc-conferences.org/call-for-contributions-eswc-2023/" target="_blank">ESWC</a>
     |
@@ -308,6 +308,8 @@
     |
 <!-- Web-based Learning -->
     <a href="#" target="_blank">ICWL</a>
+    |
+    <a href="https://ickg2023.zhonghuapu.com/" target="_blank">ICKG</a>
     |
 <!-- software engineering - others -->
     <a href="https://conferences.computer.org/sse/2023/cfp/" target="_blank">SSE</a>
@@ -573,7 +575,48 @@ ChatGPT:
     |
   <!-- 3.6 --> 
     <a href="https://mp.weixin.qq.com/s/AalsOJ2fdHziYhvUle0jnA" target="_blank">UCL汪军呼吁创新：后ChatGPT通用人工智能理论及其应用</a>
-    |               
+    |
+    <a href="https://mp.weixin.qq.com/s/Zt_McLEDOtVR9F8qLrsQGw" target="_blank">科技部部长谈ChatGPT时，举了这样两个例子</a>
+    |
+  <!-- 3.7 --> 
+    <a href="https://mp.weixin.qq.com/s/pqaABIbvZZz9P4fxxbtuCQ" target="_blank">邱锡鹏教授：大型语言模型的能力分析与应用</a>
+    | 
+  <!-- 3.8 --> 
+    <a href="https://mp.weixin.qq.com/s/YwYHJblMpI5e8vSRvv2mVw" target="_blank">大神李沐加入AI大模型创业，导师Alex Smola是创始人</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/w8QEP_muckcJbpQkfhEG5g" target="_blank">一人改代码搞崩推特，马斯克气疯：全部重写！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/yZt3sEQPzVjnIvqXsNOnPA" target="_blank">重磅！谷歌发布5620亿参数多模态模型PaLM-E，机器人操控无所不能</a>
+    |
+  <!-- 3.10 --> 
+    <a href="https://mp.weixin.qq.com/s/LwGxuy05hes6iV8MQ6yL4w" target="_blank">ChatGPT之后我们要做什么？丨文本生成中的知识和控制</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cd7g7l01V5poP41hRt1IPQ" target="_blank">王炸！微软发布Visual ChatGPT：视觉模型加持ChatGPT实现丝滑聊天</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/O4bK0dO_E8iKXe1U839NMw" target="_blank">GPT-4将于下周发布，微软德国CTO：将提供完全不同的可能性</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/JiEn377_ULqqA5H9MhM3yg" target="_blank">活动实录｜胡芳槐博士、王昊奋博士“ChatGPT探索语言未来”线上圆桌会精彩发言</a>
+    |
+  <!-- 3.11 --> 
+    <a href="https://mp.weixin.qq.com/s/443qWf9oqPlwVLxfz-bi_Q" target="_blank">巅峰对话：ChatGPT爆火之后，AIGC元年真的到来了？| 甲子光年</a>
+    |
+  <!-- 3.12 --> 
+    <a href="https://mp.weixin.qq.com/s/RlzIJItge7jjRqGwdu6-0Q" target="_blank">王川：关于 chatGPT 的随想 （一）</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/p0fjPVJrGr39aFX17eeRvQ" target="_blank">复旦MOSS团队深度访谈：研究成果将会开源</a>
+    |
+  <!-- 3.13 --> 
+    <a href="https://mp.weixin.qq.com/s/mukaNxlLkCjaVGsa6Pqhuw" target="_blank">ChatGPT让亚马逊梦碎！微软CEO狂贬语音助手</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jCB4Hg0OSV2uAfdYmYK-5Q" target="_blank">语言学巨头乔姆斯基评ChatGPT：缺乏任何智能的关键能力，追捧就是浪费资源</a>
+    |
+</br>
+</br>
+AI论文: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/7os1M2aPjuPDuY0CnZse4A" target="_blank">2022年「百强AI论文」出炉：清华紧随谷歌排名第二，宁波工程学院成最大黑马</a>
+    |
+
 </br>
 </br>
 <h4>2022</h4>
