--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -610,6 +610,9 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/jCB4Hg0OSV2uAfdYmYK-5Q" target="_blank">语言学巨头乔姆斯基评ChatGPT：缺乏任何智能的关键能力，追捧就是浪费资源</a>
     |
+  <!-- 3.14 --> 
+    <a href="https://mp.weixin.qq.com/s/mgxWigf5UrsAf3DIpb2AOw" target="_blank">ChatGPT三问：是什么、从哪来、去往哪？</a>
+    |
 </br>
 </br>
 AI论文: 
