--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -613,6 +613,8 @@ ChatGPT:
   <!-- 3.14 --> 
     <a href="https://mp.weixin.qq.com/s/mgxWigf5UrsAf3DIpb2AOw" target="_blank">ChatGPT三问：是什么、从哪来、去往哪？</a>
     |
+    <a href="https://mp.weixin.qq.com/s/ECo4vJuZdEzTTD3rGSFUhQ" target="_blank">ChatGLM：千亿基座的对话模型启动内测，单卡版模型已全面开源</a>
+    |
 </br>
 </br>
 AI论文: 
