--- a/pages/activities.html
+++ b/pages/activities.html
@@ -218,7 +218,7 @@
 
 
 <!-- 2023.03.15 收到的审稿邀请 -->
-    <li><strong>Invited Reviewer</strong>, Frontiers of Computer Science (<a href="https://www.springer.com/journal/11704"><strong><u><font color="#874e26">CIN</font></u></strong></a>)</li>
+    <li><strong>Invited Reviewer</strong>, Frontiers of Computer Science (<a href="https://www.springer.com/journal/11704"><strong><u><font color="#874e26">FCS</font></u></strong></a>)</li>
 
 
     <!-- \item {计算机研究与发展}  -->
