--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -635,13 +635,19 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/f63Olx2UuVQacQhp8ooLGA" target="_blank">斯坦福发布大模型Alpaca：A100上训3小时，性能比较GPT-3.5，被挤爆！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/Nzaj64BjfnGTDycA_v65YA" target="_blank">谷歌宣布开放PaLM API，可在浏览器内操作，终于可以尝试大模型啦</a>
+    |
   <!-- 3.17 --> 
     <a href="https://mp.weixin.qq.com/s/rRaw376VRJr3xnaSrxHhzQ" target="_blank">体验过百度文心一言，也许真会超出你的预期（5个邀请码）</a>
     |
     <a href="https://mp.weixin.qq.com/s/b8iuuuaEoVxJg4zEq_snXg" target="_blank">复旦邱锡鹏：深度剖析 ChatGPT 类大语言模型的关键技术</a>
     |
     <a href="https://mp.weixin.qq.com/s/_1NKn1QmoAc7-aDH3TuhFw" target="_blank">微软深夜放炸弹！GPT-4 Office全家桶发布，10亿打工人被革命！</a>
-    |     
+    |
+    <a href="https://mp.weixin.qq.com/s/e5oSuAVumzPXyicC1yUxcg" target="_blank">张俊林：GPT-4 模型会开创哪些新的研究方向？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NtnZaL7sEVrhnMAaN64gYg" target="_blank">GPT-4不披露技术细节，马斯克批判其背离初心，OpenAI不“open“了</a>
+    |      
 </br>
 </br>
 AI论文: 
