--- a/pages/activities.html
+++ b/pages/activities.html
@@ -114,6 +114,8 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 19th International Conference on Advanced Data Mining and Applications (<a href="https://adma2023.uqcloud.net/index.html"><strong><u><font color="#874e26">ADMA 2023</font></u></strong></a>), Shenyang, China, August 21-23, 2023</li>
+
 
     <li><strong>Invited Reviewer</strong>, The 28th International Conference on Database Systems for Advanced Applications (<a href="http://www.tjudb.cn/dasfaa2023/"><strong><u><font color="#874e26">DASFAA 2023</font></u></strong></a>), Tianjin, China, April 17-20, 2023</li>
 
