--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -647,7 +647,12 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/e5oSuAVumzPXyicC1yUxcg" target="_blank">张俊林：GPT-4 模型会开创哪些新的研究方向？</a>
     |
     <a href="https://mp.weixin.qq.com/s/NtnZaL7sEVrhnMAaN64gYg" target="_blank">GPT-4不披露技术细节，马斯克批判其背离初心，OpenAI不“open“了</a>
-    |      
+    |
+  <!-- 3.19 --> 
+    <a href="https://mp.weixin.qq.com/s/FZuq6U5NrUR_HzKF2uCPjQ" target="_blank">张俊林：从GPT-4看LLM的技术发展趋势</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ZUiybuj73cgBIYDM90aE3Q" target="_blank">清华系ChatGPT发布！唐杰团队打造，专对中文优化，还能把握最新新闻动态</a>
+    |       
 </br>
 </br>
 AI论文: 
