--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -652,7 +652,9 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/FZuq6U5NrUR_HzKF2uCPjQ" target="_blank">张俊林：从GPT-4看LLM的技术发展趋势</a>
     |
     <a href="https://mp.weixin.qq.com/s/ZUiybuj73cgBIYDM90aE3Q" target="_blank">清华系ChatGPT发布！唐杰团队打造，专对中文优化，还能把握最新新闻动态</a>
-    |       
+    |
+    <a href="https://mp.weixin.qq.com/s/e_T16M13SR69ckEnavhFDQ" target="_blank">如何利用ChatGPT进行Rebuttal，搞科研！</a>
+    |        
 </br>
 </br>
 AI论文: 
@@ -2643,6 +2645,8 @@ Software Engineering Field：
     |
 <!-- East China Normal University -->
     <a href="https://faculty.ecnu.edu.cn/_s43/zm2_6071/main.psp" target="_blank">Min Zhang</a>
+    |
+    <a href="https://ligechina.github.io/" target="_blank">Ge Li</a>
     |
   <br />
   <br />
