--- a/pages/activities.html
+++ b/pages/activities.html
@@ -223,6 +223,10 @@
     <li><strong>Invited Reviewer</strong>, Frontiers of Computer Science (<a href="https://www.springer.com/journal/11704"><strong><u><font color="#874e26">FCS</font></u></strong></a>)</li>
 
 
+<!-- 2023.03.17 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Sensors (<a href="http://www.mdpi.com/journal/sensors/"><strong><u><font color="#874e26">Sensors</font></u></strong></a>)</li>
+
+
     <!-- \item {计算机研究与发展}  -->
     <li><strong>Invited Reviewer</strong>, Journal of Computer Research and Development (<a href="https://crad.ict.ac.cn/CN/1000-1239/home.shtml"><strong><u><font color="#874e26">JCRD</font></u></strong></a>)</li>
 
