--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -262,6 +262,9 @@
 <!-- Bioinformatics and Biomedicine - B-->
     <a href="https://bidma.cpsc.ucalgary.ca/IEEE-BIBM-2023/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
     |
+<!-- bigdata - C-->  
+    <a href="http://bigdataieee.org/BigData2023/index.html" target="_blank">IEEE BigData (<a href="#" target="_blank">Download</a>)</a>
+    |
 <!-- NLP - C-->    
     <a href="http://tcci.ccf.org.cn/conference/2023/cfp.php" target="_blank">NLPCC</a>
     |
@@ -599,6 +602,8 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/JiEn377_ULqqA5H9MhM3yg" target="_blank">活动实录｜胡芳槐博士、王昊奋博士“ChatGPT探索语言未来”线上圆桌会精彩发言</a>
     |
+    <a href="https://mp.weixin.qq.com/s/yknwdKSJ1qkr0HcJcsSn6A" target="_blank">乔姆斯基：ChatGPT的虚假承诺</a>
+    |
   <!-- 3.11 --> 
     <a href="https://mp.weixin.qq.com/s/443qWf9oqPlwVLxfz-bi_Q" target="_blank">巅峰对话：ChatGPT爆火之后，AIGC元年真的到来了？| 甲子光年</a>
     |
@@ -648,13 +653,23 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/NtnZaL7sEVrhnMAaN64gYg" target="_blank">GPT-4不披露技术细节，马斯克批判其背离初心，OpenAI不“open“了</a>
     |
+  <!-- 3.18 --> 
+    <a href="https://mp.weixin.qq.com/s/dzvZc9t3eoL1BS8ofDTY1g" target="_blank">OpenChatKit：开源ChatGPT替代方案</a>
+    |
   <!-- 3.19 --> 
     <a href="https://mp.weixin.qq.com/s/FZuq6U5NrUR_HzKF2uCPjQ" target="_blank">张俊林：从GPT-4看LLM的技术发展趋势</a>
     |
     <a href="https://mp.weixin.qq.com/s/ZUiybuj73cgBIYDM90aE3Q" target="_blank">清华系ChatGPT发布！唐杰团队打造，专对中文优化，还能把握最新新闻动态</a>
     |
     <a href="https://mp.weixin.qq.com/s/e_T16M13SR69ckEnavhFDQ" target="_blank">如何利用ChatGPT进行Rebuttal，搞科研！</a>
-    |        
+    |
+  <!-- 3.20 --> 
+    <a href="https://mp.weixin.qq.com/s/OC95vSF8rpSuFRth79nzUw" target="_blank">任正非最新谈中美、科技、ChatGPT</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/DUS4pc7izs9CS3Pmz3WMxg" target="_blank">微软提出MathPrompter，GPT3的数学推理水平直接干到人类水平</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vOrw1W4tE5wRiiUAAVU6pQ" target="_blank">第一款基于GPT4的手机APP来啦，一键解读图片，颠覆生活</a>
+    |         
 </br>
 </br>
 AI论文: 
