--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -293,7 +293,7 @@
     <a href="https://www.dexa.org/dexa2023" target="_blank">DEXA</a>
     |
 <!-- software engineering - C-->     
-    <a href="#" target="_blank">APSEC</a>
+    <a href="https://conf.researchr.org/home/apsec-2023" target="_blank">APSEC</a>
     |
     <a href="#" target="_blank">MSR</a>
     |
@@ -348,6 +348,9 @@
     <a href="https://www.acaitconf.com/singer/438.html" target="_blank">ACAIT</a>
     |
     <a href="https://agist.org//iccsi2023" target="_blank">ICCSI</a>
+    |
+    <br/>
+    <a href="https://mp.weixin.qq.com/s/RyottZj01o-H9OvuST8jJg" target="_blank">Soundness？Excitement？官方解读ACL 2023论文评分机制</a>
     |
     <br/>
     <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
@@ -666,10 +669,29 @@ ChatGPT:
   <!-- 3.20 --> 
     <a href="https://mp.weixin.qq.com/s/OC95vSF8rpSuFRth79nzUw" target="_blank">任正非最新谈中美、科技、ChatGPT</a>
     |
+    <a href="https://mp.weixin.qq.com/s/MmYi1i2O911lqd0tP-jBVg" target="_blank">【他山之石】田渊栋：关于GPT-4的一些感想</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PnSoJ4j8SlR4OOYzxPwECA" target="_blank">突发！李开复宣布筹办新公司：不仅是中国版ChatGPT，全球招英才</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/7augcJN0upPkLIOWnNEfMg" target="_blank">他山之石丨GPT-4模型会开创哪些新的研究方向？ </a>
+    |
     <a href="https://mp.weixin.qq.com/s/DUS4pc7izs9CS3Pmz3WMxg" target="_blank">微软提出MathPrompter，GPT3的数学推理水平直接干到人类水平</a>
     |
     <a href="https://mp.weixin.qq.com/s/vOrw1W4tE5wRiiUAAVU6pQ" target="_blank">第一款基于GPT4的手机APP来啦，一键解读图片，颠覆生活</a>
-    |         
+    |
+    <a href="https://mp.weixin.qq.com/s/OM7XiKE4q1Y8m_d7O2FW1g" target="_blank">ChatGPT的10个平替项目，玩转AIGC</a>
+    |
+  <!-- 3.21 --> 
+    <a href="https://mp.weixin.qq.com/s/bctQc93slqYEu8UKaNhekg" target="_blank">ChatGPT崩了！全球宕机超12小时，打工人叫苦连天</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/nzYBqIaGIWB5558sQkDSNQ" target="_blank">深挖GPT-4背后的技术方向，华人开发者成绩斐然</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lbWsWSLoOGtzcTgzJavJAw" target="_blank">OpenAI重磅研究：ChatGPT可能影响80%工作岗位，收入越高影响越大</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/8ipgu-WGO1rpHaiv7O9SHA" target="_blank">文心一言的魔性作图，我头都笑掉了...</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/IuLlR0c9ZYBuOuBm3y9ejQ" target="_blank">基于ChatGPT的生物医药知识抽取测评</a>
+    |              
 </br>
 </br>
 AI论文: 
