--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -691,7 +691,18 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/8ipgu-WGO1rpHaiv7O9SHA" target="_blank">文心一言的魔性作图，我头都笑掉了...</a>
     |
     <a href="https://mp.weixin.qq.com/s/IuLlR0c9ZYBuOuBm3y9ejQ" target="_blank">基于ChatGPT的生物医药知识抽取测评</a>
-    |              
+    |
+  <!-- 3.22 --> 
+    <a href="https://mp.weixin.qq.com/s/UowaksuKvsdz4Kly8uaLZw" target="_blank">最卷一夜！Google版 ChatGPT 开放、英伟达又投下核弹显卡……一觉醒来AI又变天了</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/Q2n0upUF-5kU6u-NFejmFg" target="_blank">危！GPT将影响80%工作岗位，挣得越多越危险？OpenAI发布重磅研究</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/fQJh9r47fQ25-kOUclnf2A" target="_blank">弥补斯坦福70亿参数「羊驼」短板，精通中文的大模型来了，已开源</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/rR2hgqeS2i445J_R_1ejgA" target="_blank">谷歌正式开放「Bard」试用，很遗憾。。</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RAGrEAFqko4IcnUt5cCZcg" target="_blank">产业级文心大模型ERNIE-UIE在金融监管场景中的应用</a>
+    |                 
 </br>
 </br>
 AI论文: 
