--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2357,8 +2357,10 @@ NLP/KG Field：
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
     |
+    <a href="https://tianxing-wu.github.io/" target="_blank">Tianxing Wu</a>
+    |    
 <!-- Southwestern University of Finance and Economics -->
-    <a href="https://it.swufe.edu.cn/info/1107/7549.htm" target="_blank">Qiang Gao</a>
+    <a href="https://qianggao.xyz/" target="_blank">Qiang Gao</a>
     |
     <a href="https://it.swufe.edu.cn/szdw/fjs.htm" target="_blank">Yu Zhao</a>
     |
