--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -702,7 +702,10 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/rR2hgqeS2i445J_R_1ejgA" target="_blank">谷歌正式开放「Bard」试用，很遗憾。。</a>
     |
     <a href="https://mp.weixin.qq.com/s/RAGrEAFqko4IcnUt5cCZcg" target="_blank">产业级文心大模型ERNIE-UIE在金融监管场景中的应用</a>
-    |                 
+    |
+  <!-- 3.23 --> 
+    <a href="https://mp.weixin.qq.com/s/iuI9cnXu0fteh0CBdeDT0g" target="_blank">他山之石丨从谷歌与OpenAI的战争来看AI人才的重要性</a>
+    |                   
 </br>
 </br>
 AI论文: 
