--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -332,7 +332,7 @@
 <!--  -->
     <a href="http://www.prai.net/" target="_blank">PRAI</a>
     |
-    <a href="#" target="_blank">WISE</a>
+    <a href="http://wise-conferences.org/2023/index.html" target="_blank">WISE</a>
     |
     <a href="https://mp.weixin.qq.com/s/YQZhssg7L8BFKSpl8GKvjg" target="_blank">WISA</a>
     |
@@ -703,9 +703,19 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/RAGrEAFqko4IcnUt5cCZcg" target="_blank">产业级文心大模型ERNIE-UIE在金融监管场景中的应用</a>
     |
-  <!-- 3.23 --> 
+    <a href="https://www.toutiao.com/article/7213261622469607992/?app=news_article&timestamp=1679579120&use_new_style=1&req_id=202303232145193AE94C4FED7A3220A1B1&group_id=7213261622469607992&wxshare_count=3&tt_from=weixin_moments&utm_source=weixin_moments&utm_medium=toutiao_android&utm_campaign=client_share&share_token=897f6d9c-1d7f-459c-ac76-8f3b13027ee3&source=m_redirect&wid=1679587324167" target="_blank">GPT-4太强，OpenAI也不懂！智能到底是怎么突然「涌现」的？</a>
+    |
+  <!-- 3.23 -->
+    <a href="https://mp.weixin.qq.com/s/PVcagh4wza5MRM0afMVDBw" target="_blank">ChatGPT这么牛，我们应该如何兼顾发展和治理？</a>
+    | 
     <a href="https://mp.weixin.qq.com/s/iuI9cnXu0fteh0CBdeDT0g" target="_blank">他山之石丨从谷歌与OpenAI的战争来看AI人才的重要性</a>
-    |                   
+    |
+    <a href="https://mp.weixin.qq.com/s/QgpBa5HF3zaF1thexhT2-g" target="_blank">GPT-4的前世、今生和未来！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/bZyybWvZgHXsjuJAd5hgng" target="_blank">英伟达发布ChatGPT专用GPU，性能提升10倍，还推出云服务，普通企业也能训练LLM</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/iquNVFiz6QobZt44rtEqEg" target="_blank">当GPT-4学会看图文，一场生产力革命已势不可挡</a>
+    |                     
 </br>
 </br>
 AI论文: 
