--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -398,6 +398,8 @@
     <a href="http://share.183read.cc/article/4751382/5.html?t=167793162821890" target="_blank">热情拥抱人工智能时代</a>
     |
     <a href="https://mp.weixin.qq.com/s/gPcj9bA6iumE-faKhSd2ww" target="_blank">他山之石丨AI认知架构四十年：发展与挑战</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/V86K4AzGhXYkF67LX7SLJw" target="_blank">以太网之父Bob Metcalfe荣获图灵奖，其同名定律成为互联网经济基石</a>
     |               
 </br>
 </br>
@@ -715,7 +717,18 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/bZyybWvZgHXsjuJAd5hgng" target="_blank">英伟达发布ChatGPT专用GPU，性能提升10倍，还推出云服务，普通企业也能训练LLM</a>
     |
     <a href="https://mp.weixin.qq.com/s/iquNVFiz6QobZt44rtEqEg" target="_blank">当GPT-4学会看图文，一场生产力革命已势不可挡</a>
-    |                     
+    |
+  <!-- 3.24 -->
+    <a href="https://mp.weixin.qq.com/s/Rh1j47aVoAAtd5cLX3hhrA" target="_blank">ChatGPT全宇宙大爆炸！开启联网解除封印，无敌插件彻底颠覆体验</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/aJdJHoT7hWzFccfSCDTFaA" target="_blank">ChatGPT鲁棒性分析：对抗鲁棒与分布外泛化视角</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/JMYjN4wi4YSF2bFBu-CNOA" target="_blank">陆首群：ChatGPT不开源是说不过去的</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-ySMKmclVSlpWUhrsfbdHQ" target="_blank">Github官宣新一代Copilot X，集成GPT-4的编码神器！动动嘴就能开发</a>
+    |   
+    <a href="https://mp.weixin.qq.com/s/vCtlbP_BZOKvi3TXnqP--w" target="_blank">ChatGPT重磅升级，可以联网、添加插件！最后的封印解除了！</a>
+    |                        
 </br>
 </br>
 AI论文: 
