--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -206,8 +206,10 @@
     |
     <a href="#" target="_blank">ICAPS</a>
     |
-<!-- data mining - C-->     
+<!-- data mining - B-->     
     <a href="http://www.cloud-conf.net/icdm2023/index.html" target="_blank">ICDM</a>
+    |
+    <a href="https://cikm2023.github.io/" target="_blank">CIKM</a>
     |
 <!-- software engineering - B-->
     <a href="http://www.tjudb.cn/dasfaa2023/" target="_blank">DASFAA</a>
