--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -730,7 +730,20 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/-ySMKmclVSlpWUhrsfbdHQ" target="_blank">Github官宣新一代Copilot X，集成GPT-4的编码神器！动动嘴就能开发</a>
     |   
     <a href="https://mp.weixin.qq.com/s/vCtlbP_BZOKvi3TXnqP--w" target="_blank">ChatGPT重磅升级，可以联网、添加插件！最后的封印解除了！</a>
-    |                        
+    |
+    <a href="https://mp.weixin.qq.com/s/hezyHhp0GOk7cDJB1PGPTQ" target="_blank">GPT-4开启AGI之门？微软最新刷屏154页《通用人工智能的火花:GPT-4的早期实验》报告，探究去向AGI之路 （附中文版）</a>
+    |
+  <!-- 3.25 -->
+    <a href="https://mp.weixin.qq.com/s/CS35inBUcsdohTHhxwSUSw" target="_blank">【ChatGPT系列报告】ChatGPT/AIGC到底能做什么？生成式 AI 将重塑几乎所有行业</a>
+    |
+    <a href="https://www.toutiao.com/article/7214472335875637800/?app=news_article&timestamp=1679764084&use_new_style=1&req_id=20230326010803BB0E43AF92E950A0428D&group_id=7214472335875637800&wxshare_count=1&tt_from=weixin&utm_source=weixin&utm_medium=toutiao_android&utm_campaign=client_share&share_token=43424630-6d51-4a5f-a48f-51ff9d98ef19&source=m_redirect" target="_blank">ChatGPT 已成为下一代的新操作系统！</a>
+    |  
+  <!-- 3.26 -->
+    <a href="https://mp.weixin.qq.com/s/CS35inBUcsdohTHhxwSUSw" target="_blank">首个接入 GPT-4，曾经比 GitHub Copilot 还好用的代码编辑器，开源了！</a>
+    |
+  <!-- 3.27 -->
+    <a href="https://mp.weixin.qq.com/s/KvU6aKAuodG6AhVUzeCDIg" target="_blank">他山之石丨 ChatGPT作为知识库问答系统的问答能力评测</a>
+    |                         
 </br>
 </br>
 AI论文: 
