--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -743,7 +743,19 @@ ChatGPT:
     |
   <!-- 3.27 -->
     <a href="https://mp.weixin.qq.com/s/KvU6aKAuodG6AhVUzeCDIg" target="_blank">他山之石丨 ChatGPT作为知识库问答系统的问答能力评测</a>
-    |                         
+    |
+    <a href="https://mp.weixin.qq.com/s/wlvTuldMQ1Kdoj89drNd8Q" target="_blank">GPT-4 已经可以独立创业了，感觉自己在追剧，一个人就是一家公司</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/67VVqdl1F2NpMbElaDtlug" target="_blank">加了插件的 ChatGPT 目前确实是中心，希望未来的机联网不是</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/DO3e4B7h8MZOtU91dSomdw" target="_blank">AIGC周报｜周鸿祎：GPT-6到GPT-8或将产生意识，成为新物种；OpenAI：我们将重建信任；“让他看起来像梵高”</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xSwSqz7KkrVK3iZDosLHtw" target="_blank">给表情包都能猜电影，ChatGPT的涌现能力是从哪里来的？</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/k8ZdjL2iyhhNDXmFNp7gwg" target="_blank">微软豪华力作，称GPT-4已具备人类心智，LeCun质疑</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/vzIm-fOxxPEU69ArAowoIg" target="_blank">可以微调类ChatGPT模型啦！开源Alpaca-LoRA+RTX 4090就能搞定</a>
+    |                          
 </br>
 </br>
 AI论文: 
