--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -755,6 +755,14 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/k8ZdjL2iyhhNDXmFNp7gwg" target="_blank">微软豪华力作，称GPT-4已具备人类心智，LeCun质疑</a>
     | 
     <a href="https://mp.weixin.qq.com/s/vzIm-fOxxPEU69ArAowoIg" target="_blank">可以微调类ChatGPT模型啦！开源Alpaca-LoRA+RTX 4090就能搞定</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/KrN5KTBl2mAGAvKJHDDfwA" target="_blank">汪军教授组织了7位AI学者，论道ChatGPT后的通用人工智能理论和应用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/fkxqFd0LUBjmoh6mhPhNfg" target="_blank">工业AI也将迎来「ChatGPT时刻」</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/m943KNGUzFqu62lAlyl5-A" target="_blank">GPT-4的研究路径没有前途？Yann LeCun给自回归判了死刑</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/b3hKPISdBboSdzUHhRGKMA" target="_blank">当GPT-4反思自己错了：性能提升近30%，编程能力提升21%</a>
     |                          
 </br>
 </br>
