--- a/pages/activities.html
+++ b/pages/activities.html
@@ -73,7 +73,7 @@
     <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
 
 
-    <li><strong>PC member</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://adma2023.uqcloud.net/index.html"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
+    <li><strong>PC member</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="http://www.apweb-waim2023.com/"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
     
 
     <li><strong>PC member</strong>, The 28th International Conference on Database Systems for Advanced Applications (<a href="http://www.tjudb.cn/dasfaa2023/"><strong><u><font color="#874e26">DASFAA 2023</font></u></strong></a>), Tianjin, China, April 17-20, 2023</li>
@@ -117,7 +117,7 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
-    <li><strong>Invited Reviewer</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://adma2023.uqcloud.net/index.html"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
+    <li><strong>Invited Reviewer</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="http://www.apweb-waim2023.com/"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
 
 
     <li><strong>Invited Reviewer</strong>, The 19th International Conference on Advanced Data Mining and Applications (<a href="https://adma2023.uqcloud.net/index.html"><strong><u><font color="#874e26">ADMA 2023</font></u></strong></a>), Shenyang, China, August 21-23, 2023</li>
