--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -244,8 +244,6 @@
     |
     <a href="https://2023.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
     |
-    <a href="" target="_blank">CIKM</a>
-    |
     <a href="https://www.2023.ieeeicme.org/index.php" target="_blank">ICME</a>
     |
     <a href="https://icmr2023.org/" target="_blank">ICMR</a>
@@ -763,7 +761,19 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/m943KNGUzFqu62lAlyl5-A" target="_blank">GPT-4的研究路径没有前途？Yann LeCun给自回归判了死刑</a>
     |
     <a href="https://mp.weixin.qq.com/s/b3hKPISdBboSdzUHhRGKMA" target="_blank">当GPT-4反思自己错了：性能提升近30%，编程能力提升21%</a>
-    |                          
+    | 
+    <a href="https://mp.weixin.qq.com/s/w3Nk60apI-bG4B7_iO_NZw" target="_blank">ChatGPT 加持，决策大模型距离 AGI 更进一步</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/H2KIVzm04BG6x-ShCs09mg" target="_blank">百度智能云发布“文心千帆”：实时演示，全能助手，价格比 ChatGPT 低</a>
+    |
+  <!-- 3.28 -->
+    <a href="https://mp.weixin.qq.com/s/RWiO90srfx7O6dlbGZaHVQ" target="_blank">众说纷纭：大模型要颠覆软件开发了吗？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/EW8SeeLXOi66ovs4IpGXNA" target="_blank">Stealing Large Language Models: 关于对ChatGPT进行模型窃取的一些工作</a>
+    |
+  <!-- 3.29 -->
+    <a href="https://mp.weixin.qq.com/s/RWiO90srfx7O6dlbGZaHVQ" target="_blank">众说纷xxx</a>
+    |                           
 </br>
 </br>
 AI论文: 
